--- a/templates/player/index.html.twig
+++ b/templates/player/index.html.twig
@@ -29,7 +29,7 @@
                 </li>
             </ul>
             <div class="col-sm-12" x-show="showActive">
-                Active
+                {{ inc }}
             </div>
             <div class="col-sm-12" x-show="showInactive">
                 Inactive
